--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>MergeSort</title>
-    <link rel="stylesheet" href="CSS/CA2.css">
-    <script src="JS/CA2.js"></script>
+    <link rel="stylesheet" href="CA2.css">
+    <script src="CA2.js"></script>
     <script src=
 "https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
     </script>
